--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "twopi-rest": "^1.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
