--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "create-template-twopi-quiz",
-  "version": "0.1.1",
+  "version": "0.1.2",
+  "description": "This template packs a pre-build mockserver with cra to help beginner start developing frontend applications with out worring much about backend.",
+  "author": "Shivam Pandey",
+  "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
